# DroneNexus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  =4.0.0  Dockerfile  README.md  config.py  csontology.py  docker-compose.yml  main.py  nexus.db  ontology_bridge.py  protocol.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: auth.py  copilot.py  export.py  logging_config.py  metrics.py  middleware.py  rate_limiter.py  routes.py  websocket.py
backend/attacker/: __init__.py  adaptive.py  comms_model.py  ew_effects.py  flocking.py  hostile_swarm.py  swarm_adapter.py
backend/audit/: __init__.py  hash_chain.py
backend/config/: effectors.yaml
backend/cot/: __init__.py  bidirectional.py  bridge.py  formatter.py  receiver.py  sender.py
backend/db/: models.py
backend/decision/: advisor.py  engine.py  models.py  roe.py
backend/defense/: __init__.py  allocator.py  bda.py  effector_handoff.py  ew_effectors.py  federation.py  iff.py  swarm_counter.py
backend/evaluation/: __init__.py  benchmark.py  metrics.py
backend/extensions/: __init__.py  alerts_ext.py  base.py  collision_ext.py  geofence_ext.py  manager.py
backend/fusion/: __init__.py  covariance_intersection.py  delay_compensator.py  jpda.py  kalman.py  plausibility.py  rf_visual_linker.py  sensor_models.py  track_manager.py  trajectory.py  visual_correlator.py
backend/goggles/: bridge.py
backend/mavlink/: commands.py  connection.py
backend/missions/: planner.py  state_machine.py
backend/models/: benchmark_baseline.json  drone_eval_results.json  drone_seraphim_eval.json  optimization_gen3.json  quantization_benchmark.json  rl_adversary_saturation.json  rl_adversary_v1.json  rl_adversary_v2.json
backend/msp/: commands.py  connection.py  protocol.py  translator.py
backend/nlp/: __init__.py  executor.py  intent_parser.py
backend/registries/: __init__.py  base.py  connection_registry.py  drone_registry.py
backend/scripts/: after_action_review.py  autonomous_engage.py  benchmark.py  check_deployment.py  demo_walkthrough.py  evolve_benchmark.py  export_model.py  prepare_drone_dataset.py  quantize_model.py  replay_wargame.py  replay_with_detection.py  train_and_eval.py  train_drone_detector.py  train_rl_adversary.py  webcam_detect.py  webcam_detect_v2.py
backend/sensors/: __init__.py  acoustic_source.py  antsdr_source.py  base.py  clutter.py  dji_decoder.py  environment.py  health_monitor.py  odid_decoder.py  (+5 more)
config/: nexus.yaml  overwatch.yaml
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  COMPLIANCE.md  DEMO_SCRIPT.md  DESIGN_RATIONALE.md  EDGE_DEPLOYMENT.md  OVERWATCH_ONE_PAGER.md  SBIR_PHASE_I_OUTLINE.md
drone-sim/gazebo/plugins/: CMakeLists.txt  sensor_noise_plugin.cc  wind_plugin.cc
drone-sim/ros2_ws/src/drone_description/: package.xml  setup.py
drone-sim/ros2_ws/src/drone_perception/: package.xml  setup.py
drone-sim/ros2_ws/src/drone_perception/drone_perception/: aruco_detector.py  camera_node.py  detector_node.py  terrain_classifier.py
drone-sim/ros2_ws/src/drone_perception/tests/: test_detector_node.py
nginx/: Dockerfile  generate-dev-certs.sh  nginx.conf
scripts/: build.sh  demo-stop.sh  demo-wargame.sh  demo.sh  dev-server.sh
tests/: protocol.test.js
(+353 files in other folders)
